KYC / Mobile Template Step One / Fixed the issues on mobile template

--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -220,7 +220,7 @@
             .upload {
                 &-doc {
                     @include mq("phone", max) {
-                        display: none;
+                        // display: none;
                     }
                     .file-upload {
                         display: flex;
